ros_ws/logs/pd/build.make.064.log.stderr
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp: In member function ‘std_msgs::Float32MultiArray Control::setup()’:
/home/mech-user/work/nekonote/ros_ws/src/pd/src/control.cpp:86:3: error: expected ‘;’ before ‘msg’
   msg.data.push_back(0.0)
   ^
/home/mech-user/work/nekonote/ros_ws/src/pd/src/main.cpp: In constructor ‘SubscribeAndPublish::SubscribeAndPublish()’:
/home/mech-user/work/nekonote/ros_ws/src/pd/src/main.cpp:20:5: error: ‘pub4’ was not declared in this scope
     pub4 = nh.advertise<std_msgs::Float32MultiArray>("setup", 0.1)
     ^
/home/mech-user/work/nekonote/ros_ws/src/pd/src/main.cpp:21:5: error: expected ‘;’ before ‘sub’
     sub = nh.subscribe("board", 10, &SubscribeAndPublish::boardCallback2, this);
     ^
make[2]: *** [CMakeFiles/pd.dir/src/control.cpp.o] エラー 1
make[2]: *** 未完了のジョブを待っています....
make[2]: *** [CMakeFiles/pd.dir/src/main.cpp.o] エラー 1
make[1]: *** [CMakeFiles/pd.dir/all] エラー 2
make: *** [all] エラー 2
